Tekrar bi ufak tefek

--- a/content/sayi/sayi-1/4.md
+++ b/content/sayi/sayi-1/4.md
@@ -16,7 +16,7 @@ tags= [
 ]
 +++
 <a href="/sayi-1/dijitallesmenin-kullanici-deneyimi-üzerindeki-etkisi/" id="next"></a>
-<img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="">
+<img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy">
 <div class="container">
     <h1>Rayların Üzerinde Raymond Loewy</h1>
     <div class="row">
@@ -33,7 +33,7 @@ tags= [
                 demiryolu operasyonlarının ayrılmaz bir parçası olarak gördüler.</p>
             <p>Zorunlu ve sorunlu geçen Loewy-Pennsy ilişkisinin ortaya çıkardığı sonuç, Amerikan
                 endüstrisinde tasarım ve formun nihai birleşimi olan muazzam bir potansiyel göstermiştir.</p></div>
-                <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/raymond-loewy-collage.jpg" alt=""></div>        
+                <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/raymond-loewy-collage.jpg" alt="Raymond Loewy Kolaj"></div>        
         <div class="col-md-6"><p>Lokomotif çalışmasında, önemli mühendislik sorunları çözüldükten sonra Loewy dekoratif
             amaçlar için çağrıldı. Aynı dönemlerde rakibi Henry Dreyfuss gibi Loewy de lokomotif ve araç
             iç mekanlarından yemek takımlarına, peçetelere ve menülere kadar her şeyi tasarladı.</p>
@@ -44,15 +44,15 @@ tags= [
         <div class="col-md-4"><p>Haddelenmiş koltuklar, porthole pencereler ve duvarlardaki hız çizgileri…</p>
             <p>Zamanını radikal bir düzene sokmaya çalışan Loewy, 1935’deki bu çiziminde koltuktan yatağa dönüşebilen katlamalı konseptini temsil ediyor. Ancak bu modern iç mekan, PRR'nin kucaklamak için hazır olmadığı bir fikir.</p>
             </div>
-        <div class="col-md-8"><img class="img-fluid" src="/img/raymond-loewy-lokomotif-1935.jpg" alt=""><small>Resim 1. (16 Ocak 1935)</small></div>
+        <div class="col-md-8"><img class="img-fluid" src="/img/raymond-loewy-lokomotif-1935.jpg" alt="Raymond Loewy Lokomotif İç Tasarımı 16 Ocak 1935"><small>Resim 1. (16 Ocak 1935)</small></div>
         <div class="col-md-4"><p>Bir yıl sonraki ikinci çizim, bir aracın iç mekanını güncellemek için daha pratik -daha az estetik olsa bile- bir çözümü temsil ediyor. Loewy bu çiziminde; koltuk uçlarına panel ekleyerek, koltuk rengini parlak sarıyla ve döşemeyi muşambayla değiştirerek -mevcut banliyö aracını yeniden şekillendirdiği MP-54 binek aracı için- daha kabul edilebilir ve daha az maliyetli bir tasarım sunmuştur.</p>
             <p>Önceki tasarım hiçbir zaman uygulanmadıysa da, sonraki tasarım bir şekilde gerçekleştirilmiş olabilir. Loewy'nin kariyerinde nispeten erken olan bu önemli çizimler, iki tasarım yaklaşımını göstermektedir: biri gelişmiş bir konsept çizimi ve diğeri modern stile daha pragmatik bir çözüm.</p>
             </div>
-        <div class="col-md-8"><img class="img-fluid" src="/img/raymond-loewy-lokomotif-1936.jpg" alt=""><small>Resim 2. (26 Mayıs 1936)</small></div>
+        <div class="col-md-8"><img class="img-fluid" src="/img/raymond-loewy-lokomotif-1936.jpg" alt="Raymond Loewy Lokomotif İç Tasarımı 26 Mayıs 1936"><small>Resim 2. (26 Mayıs 1936)</small></div>
         <div class="col-md-4"><p>Aracın dışına çıktığımızda zamanın ötesine yolculuk eden tasarımı görmekteyiz.</p>
             <p>Raymond, 1938'de Pennsylvania Demiryolu için dünyanın en büyük buharlı lokomotifi olan S-1 tasarımını tanıttı. Mermi burun, çıkıntılı far ve motorun uzunluğunu uzatan yatay krom şeritlere sahip olan S-1, 1939 Dünya Fuarı'nda cazibe merkezi oldu. Yalnızca bir tane S-1 üretildi, ancak Loewy'nin PRR için yaptığı çalışmaların çoğu gibi, inanılmaz bir promosyon parçası olarak hizmet etti. Başarısı tesadüf değildi. Bu tasarımı, Loewy'yi sonsuza kadar aerodinamik (streamline) trenle özdeşleştirecekti.</p>
            </div>
-           <div class="col-md-8"><br><img class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt=""></div>
-           <div class="col-md-12"><br> <img class="img-fluid" src="/img/PRR-S1-Loewy.jpg" alt=""></div>
+           <div class="col-md-8"><br><img class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt="Raymond Loewy Lokomotif Illustrasyonu"></div>
+           <div class="col-md-12"><br> <img class="img-fluid" src="/img/PRR-S1-Loewy.jpg" alt="Raymond Loewy'nin PRR için yaptığı S1 Lokomotif tasarımı"></div>
     </div>
 </div>
