--- a/content/sayi/sayi-1/5.md
+++ b/content/sayi/sayi-1/5.md
@@ -17,7 +17,7 @@ tags= [
 +++
 <a href="/sayi-1/tasarimda-kompozisyon-nedir/" id="next"></a>
 <div class="container">
-    <div class="text-center"><img class="img-fluid" src="/img/evolution-desk.gif" alt=""></div>
+    <div class="text-center"><img class="img-fluid" src="/img/evolution-desk.gif" alt="Çalışma Masasının Teknolojiyle Beraber Yıllar İçindeki Değişimi."></div>
     <div class="row">
      <div class="col-md-6">  <p>Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz.
         Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün
@@ -25,7 +25,7 @@ tags= [
         önce insanlar, ürünlerle üretmek veya tüketmek için fiziksel olarak etkileşime giriyordu. Fakat bilgisayarların
         insanların hayatına girmesiyle birlikte bilgisayarlar fiziksel ürünlerle birleşti ve dijital ürünler ortaya
         çıktı. Bu da kullanıcıların ürünlerle etkileşimini büyük ölçüde değiştirdi.</p></div>
-        <div class="col-md-6"><br><br><img class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt=""><br><br></div>
+        <div class="col-md-6"><br><br><img class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt="Ürünlerde Dijitalleşme"><br><br></div>
     </div>
 <div class="row">
     <div class="col-md-6"><p>Dijital bir dergi olarak fizikselden dijitale dönen ürünlerin canlı bir örneğiyiz. Bunun yanı sıra e-kitaplar
@@ -44,7 +44,7 @@ tags= [
             Kandinsky’ye göre
             kullanıcı deneyimi, kullanıcıların ürün ile etkileşimde bulunurken ki algıların toplamıdır. Bu algılar:
         </p></div>
-        <div class="col-md-6"><br><img class="img-fluid" src="/img/dijitale-yolculuk.png" alt=""></div>
+        <div class="col-md-6"><br><img class="img-fluid" src="/img/dijitale-yolculuk.png" alt="Dijitale Yolculuk Illustrasyon"></div>
 </div><br><br>
     <ul>
         <li><b>Etkinlik</b> (Sonuç ne kadar iyi?)</li>
@@ -88,7 +88,7 @@ tags= [
                     deneyiminde arzu edilenin ne olduğu keşfedilir ve ardından tasarıma geçilir.</li>
             </ul>
         </div>
-        <div class="col-md-6"><br><br><br> <img class="img-fluid" src="/img/kullanim-deneyimi-algilari.png" alt=""></div>
+        <div class="col-md-6"><br><br><br> <img class="img-fluid" src="/img/kullanim-deneyimi-algilari.png" alt="Kullanıcı Deneyiminde Algılar. UX (User Experince) deneyim algıları."></div>
     </div>
    
 </div>
