--- a/content/sayi/sayi-1/6.md
+++ b/content/sayi/sayi-1/6.md
@@ -66,7 +66,7 @@ tags= [
         denge yarattığını ve bu dengenin de uyumu oluşturduğunu fark edebiliriz.
       </p>
     </div>
-    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/HerbertBayer_PostcardBauhausAusstellungWeimar_1923_mudac.jpg" alt="">
+    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/HerbertBayer_PostcardBauhausAusstellungWeimar_1923_mudac.jpg" alt="Herbert Bayer, Weimar Sergisi, 1923">
     <small>Herbert Bayer, Weimar Sergisi, 1923</small></div>
     <div class="col-md-6">
       <p>
