--- a/content/sayi/sayi-1/2.md
+++ b/content/sayi/sayi-1/2.md
@@ -16,8 +16,7 @@ tags= [
 ]
 +++
 <a href="/sayi-1/surdurulebilir-ambalaj-tasarimi/" id="next"></a>
-<img class="img-fluid" src="/img/coffee-thumbnail.jpg" alt="">
-
+<div class="text-center"><img class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
 <div class="container">
     <div class="row">
         <div class="col-md-4"><img class="img-fluid" src="/img/Braun-1972-KF-20.jpg" alt=""></div>
@@ -82,8 +81,7 @@ tags= [
         <small>Alt bölme (A) su içerir.  Isıtıldığında, buhar basıncı, suyu öğütülmüş kahve (B) içeren bir sepetten toplama odasına (C) iter.   
        <br><br> </small></div>
 </div></div>
-<img class="img-fluid" src="/img/mochapot.jpg" alt="">
-<small>İllustrasyon: Elif Ersöz</small>
+<div class="text-center"><img class="img-fluid" src="/img/mochapot.jpg" alt=""></div><br><small>İllustrasyon: Elif Ersöz</small>
 <div class="container kaynak"><p><br><br><br><b>Kaynaklar</b> 
 <br>Chambord Coffee Maker, Braun KF 20 Aromaster, <a href="https://www.100designs.cc/" target="_blank" rel="noopener noreferrer">https://www.100designs.cc/</a>
 <br> Braun KF 20, <a href="https://onlyonceshop.com/store/braun-kf-20" target="_blank" rel="noopener noreferrer">https://onlyonceshop.com/store/braun-kf-20 </a>
