--- a/content/sayi/sayi-1/6.md
+++ b/content/sayi/sayi-1/6.md
@@ -86,19 +86,7 @@ tags= [
     <div class="col-md-6">
       <p>
         <h3>Denge</h3>
-        <b>Denge,</b> kompozisyondaki görsel ağırlığın oluşturduğu bir terazide
-        eşitliği sağlayan bir tasarım ilkesidir. Dengeyi sağlamak için simetrik,
-        asimetrik ve radyal dediğimiz metodlar kullanılır. Simetrik denge yatay
-        ya da dikey eksende aynalanmış şekilde oluşan görüntü ile oluşur.
-        Simetrik öğeler göze kusursuz görünüp doğru olarak gelir. Asimetrik
-        denge ise tam tersi şekilde ağırlığın bir tarafa verildiği diğer tarafın
-        daha boş bırakıldığı ya da eğer bu bir grafik kompozisyon ise bir
-        tarafta yazı diğer tarafta ise grafik öğenin yer alacağı şekilde
-        konumlandırılabilir. Simetrik denge ne kadar kusursuz görünse de genelde
-        doğru şekilde kurulmuş asimetrik dengenin yarattığı dinamizm estetik
-        olarak izleyiciye daha çok geçebilir. Radyal denge ise bir noktanın
-        etrafında dönen ve daha çok dairesel bir görünüm oluşturan bir denge
-        çeşididir.
+<strong>Denge,</strong> kompozisyondaki görsel ağırlığın oluşturduğu bir terazide eşitliği sağlayan bir tasarım ilkesidir. Dengeyi sağlamak için <strong>simetrik</strong>, <strong>asimetrik</strong> ve <strong>radyal</strong> dediğimiz metodlar kullanılır. Simetrik denge yatay ya da dikey eksende aynalanmış görüntü ile oluşur. Simetrik öğeler göze kusursuz görünüp estetik gelir. Asimetrik denge ise tam tersi şekilde ağırlığın bir tarafa verildiği diğer tarafın daha boş bırakıldığı ya da eğer bu bir grafik kompozisyon ise bir tarafta yazı diğer tarafta ise grafik öğenin yer alacağı şekilde konumlanır. Simetrik denge ne kadar kusursuz görünse de genelde doğru şekilde kurulmuş asimetrik dengenin yarattığı dinamizm izleyiciyi estetik olarak daha çok etkiler. Radyal denge ise bir noktanın etrafında dönen ve daha çok dairesel bir görünüm oluşturan bir denge çeşididir.
       </p>
     </div>
     <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/Lissitzky_El_1919_Proun_10.jpg" alt="El Lissitzky, Proun 10, 1919">
@@ -108,7 +96,7 @@ tags= [
         <h3>Ritim</h3>
         <b>Ritim</b> bir öğenin düzenli ve akıcı şekilde tekrarlandığı düzendir.
         Bu aynı zamanda ritimin komposizyonda bir enerji oluşturmasını ve bu
-        enerjinin de komposizyona hareket getirmesini sağlar. Hareketsiz duran
+        enerjinin de komposizyona hareket katmasını sağlar. Hareketsiz duran
         yapı içinde yaratılan hareket, olayı ilgi çekici hale getirir.
       </p>
     </div>
@@ -118,8 +106,8 @@ tags= [
       <p>
         <h3>Hiyerarşi</h3>
         <b>Hiyerarşi;</b> önem, aşama belirtilerek yapılan bir sınıflamadır.
-        Vurgulanmak istenen öğe, boyut, renk, doku, yerleşim olarak ön plana
-        çıkartılır. Örneğin gazeteler veya dergilerde gördüğümüz gibi başlık;
+        Vurgulanmak istenen öğe; boyut, renk, doku, yerleşim olarak ön plana
+        çıkartır. Örneğin gazeteler veya dergilerde gördüğümüz gibi başlık;
         büyük harflerle, büyük puntoyla, koyu ve dikkat çeken renkler ile
         kullanılırken metin gövdesi, içeriği anlattığı için daha küçük okunaklı
         bir ton ile verilir. Başlık ile metin gövdesi arasında kalan öğeler -eğer
@@ -135,15 +123,13 @@ tags= [
     <div class="col-md-6 ">
       <p>
         <h3>Boşluk</h3>
-        <b>Boşluk,</b> daha çok beyaz boşluk ya da negatif boşluk olarakta
+        <b>Boşluk,</b> daha çok beyaz boşluk ya da negatif boşluk olarak
         adlandırılsa da biz hepsini kapsayacak şekilde ele almayı seçtik.
-        Kompozisyonda öğeler arasında bırakılan boşluk kompozisyona nefes verir,
+        Kompozisyonda öğeler arasında bırakılan boşluk; nefes verir,
         alan açar, aynı zamanda yol gösterici de olabilir. Bazı kompozisyonlarda
-        vurgulanmak istenen öğeye yardımcı olması bariz şekilde kullanılmış iken
-        başka kompozisyonlarda ise sadece nefes vermek amacıyla kullanılmış
-        olabiliyor. Sadece görsel bir kompozisyonda değil, yazılı bir
-        kompozisyonda da boşlukların okuyucu için ne kadar önemli olduğunu
-        biliyoruz. Tek seferde yazılmış gibi hiç paragraf açılmadan, ara
+        vurgulanmak istenen öğeye yardımcı olması için kullanılırken
+        bazı kompozisyonlarda ise sadece nefes vermek amacıyla kullanılabilir. Sadece görsel kompozisyonda değil, yazılı 
+        kompozisyonda da boşluklar okuyucu için önemlidir. Paragraf açılmadan, ara
         verilmeden yazılan yazılar daha okumadan bizim için boğucu ve yorucu bir
         görüntü oluşturur.
       </p>
