--- a/content/sayi/sayi-1/2.md
+++ b/content/sayi/sayi-1/2.md
@@ -24,7 +24,7 @@ tags= [
             <p>Kahvelerinizi hazırlayın ve okumaya başlayın…</p>
             <h3>Braun KF 20 Aromaster</h3>
             <p> 1972'de Florian Seiffert tarafından (Dieter Rams'ın rehberliğinde) Almanya’ da tasarlanmıştır. Braun için tasarlanan KF 20 Aromaster, kaynar suyu bir kahve filtresinden geçirmek için yerçekimini kullanan bir elektrikli kahve makinesidir.</p>
-            <p>Orijinal KF 20, 20. yüzyıl endüstriyel tasarımının öyle bir simgesidir ki, Braun: Fifty Years of Design and Innovation kitabının kapağında yer alır. KF 20, zamanına göre o kadar yenilikçiydi ki, ondan sonra gelen üreticiler için büyük bir ilham kaynağı olmuştur. Silindirik şekli minimal ve işlevseldir, aynı zamanda zarif ve yalındır. </p>
+            <p>Orijinal KF 20, 20. yüzyıl endüstriyel tasarımının öyle bir simgesidir ki, Braun: Fifty Years of Design and Innovation kitabının kapağında yer alır. KF 20, zamanına göre o kadar yenilikçidir ki, ondan sonra gelen üreticiler için büyük bir ilham kaynağı olmuştur. Silindirik şekli minimal ve işlevseldir, aynı zamanda zarif ve yalındır. </p>
             <p> Kahve makinesi, suyu kaynatan ısıtma bobinli bir üst hazneden oluşur, pürüzsüz plastik silindirik bir muhafaza ve su haznesinin altındaki kâğıt filtre için siyah plastik bantla kaplanmıştır.  Filtre tutacağına hizalanan siyah plastik saplı çıkarılabilir cam sürahi ve üste iki dikey krom metal boru ile bağlanan ısıtma yastıklı bir taban bulunur. Bu ikonik kahve makinesi zamansız bir tasarımdır. </p>
             </div>
     </div>
