--- a/content/sayi/sayi-1/5.md
+++ b/content/sayi/sayi-1/5.md
@@ -28,10 +28,11 @@ tags= [
         <div class="col-md-6"><br><br><img class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt="Ürünlerde Dijitalleşme"><br><br></div>
     </div>
 <div class="row">
-    <div class="col-md-6"><p>Dijital bir dergi olarak fizikselden dijitale dönen ürünlerin canlı bir örneğiyiz. Bunun yanı sıra e-kitaplar
+    <div class="col-md-12"><p>Dijital bir dergi olarak fizikselden dijitale dönen ürünlerin canlı bir örneğiyiz. Bunun yanı sıra e-kitaplar
         satın alıyor, dinleyeceğimiz albümü elimize almadan telefondan açıyor, fotoğraf makinesi yerine telefon
         kamerasını kullanıyor, çizimlerimizi kağıt ve kalem yerine bilgisayar ve tabletlerimizle yapıyor ve tüm bu
         örnekler gibi çoğu ihtiyacımızı ve isteğimizi dijital cihazlarımızla hallediyoruz.</p>
+    </div><div class="col-md-6">
         <p>Bu dönüşüm kullanıcı için olumlu ve olumsuz etkiler yarattı. Günümüzde dijital kullanıcı deneyimindeki
             olumsuzlukların en öne çıkan nedenlerinden biri tüm kullanıcıları ortalama bir kullanıcıya indirgemek.
             ‘’Ortalama kullanıcıya’’ seslenen ürün ve hizmetler çoğu zaman kullanıcının dahi farkına varamadığı
@@ -43,14 +44,14 @@ tags= [
             <b>algıladıkları</b>, nasıl <b>kullandıkları</b> ve onun hakkında <b>nasıl hissettiklerinin</b> oluşumudur.
             Kandinsky’ye göre
             kullanıcı deneyimi, kullanıcıların ürün ile etkileşimde bulunurken ki algıların toplamıdır. Bu algılar:
+            <ul>
+                <li><b>Etkinlik</b> (Sonuç ne kadar iyi?)</li>
+                <li><b>Verimlilik</b> (Fiyat/performans oranı nasıl?)</li>
+                <li><b>Duygusal tatmin</b> (Ne kadar iyi hissettiriyor?)</li>
+            </ul>
         </p></div>
         <div class="col-md-6"><br><img class="img-fluid" src="/img/dijitale-yolculuk.png" alt="Dijitale Yolculuk Illustrasyon"></div>
 </div><br><br>
-    <ul>
-        <li><b>Etkinlik</b> (Sonuç ne kadar iyi?)</li>
-        <li><b>Verimlilik</b> (Fiyat/performans oranı nasıl?)</li>
-        <li><b>Duygusal tatmin</b> (Ne kadar iyi hissettiriyor?)</li>
-    </ul>
 <div class="row">
     <div class="col-md-4">    <p>Dergi adına konuşursak basılı derginin hazırlanmasına yardımcı araçların olması güzel bir şey fakat elimizde
         dergileri tamamen değiştiren araçların olması bambaşka bir şey. Neden bir dergide hareketli görsel, sesli
