ufak değişiklikler svg vs. vs.

--- a/content/sayi/sayi-1/4.md
+++ b/content/sayi/sayi-1/4.md
@@ -7,7 +7,7 @@ description="Raymond Loewy, Amerika’da ürettiği eserleriyle Amerikalı tasar
 aciklama="5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da ürettiği eserleri sayesinde Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır."
 thumb="/img/loewy-lokomotif-thumbnail.jpg"
 tarih="Eylül 2020"
-sayi="01"
+sayi="1"
 sayfa="04"
 yazar="Zeynep Yarar"
 type="sayfa"
@@ -16,7 +16,7 @@ tags= [
 ]
 +++
 <a href="/sayi-1/dijitallesmenin-kullanici-deneyimi-üzerindeki-etkisi/" id="next"></a>
-<img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy">
+<div class="text-center"><img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy"></div>
 <div class="container">
     <h1>Rayların Üzerinde Raymond Loewy</h1>
     <div class="row">
