--- a/content/sayi/sayi-1/8.md
+++ b/content/sayi/sayi-1/8.md
@@ -1,13 +1,13 @@
 +++
 title = "Yorumlar"
-seotitle= "Markut Dergiye Gelen Yorumlar"
+seotitle= "Markut Dergi Sayı 1 Yorumlar"
 url = "sayi-1/yorumlar/"
 description="Markut derginin 1. sayısına gelen yorumlar. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir."
 aciklama="Markut ekibinden sevgiyle..."
 type="sayfa"
 tarih="Ağustos 2020"
 date = "2020-08-01"
-sayi="01"
+sayi="1"
 sayfa="08"
 yorum="var"
 yazar="Markut Ekibi"
