yazıyı okuyu kaldırdım. bir kaç ufak değişiklik

--- a/content/sayi/sayi-1/0.md
+++ b/content/sayi/sayi-1/0.md
@@ -1,6 +1,6 @@
 +++
 title = "Sayı 1 İçindekiler"
-url = "sayi-1"
+url = "sayi-1/"
 seotitle = "Endüstriyel Tasarım Dergisinin 1. Sayısı Markut Sayı: 1"
 description="Markut derginin yeni sayısı 1. sayı çıktı. Endüstriyel tasarım dergimizden 1. sayımızı online ücretsiz okuyabilirsiniz."
 aciklama="Kafasını yumurtadan çıkartan Markut, her sayısıyla büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz.."
