--- a/content/sayi/sayi-1/1.md
+++ b/content/sayi/sayi-1/1.md
@@ -1,6 +1,6 @@
 +++
 title = "Markut Nedir?"
-url = "sayi-1/markut-nedir"
+url = "sayi-1/markut-nedir/"
 date = "2020-08-31"
 seotitle = "Markut Nedir?"
 description=""
