--- a/content/sayi/sayi-1/5.md
+++ b/content/sayi/sayi-1/5.md
@@ -1,6 +1,6 @@
 +++
 title = "Dijitalleşmenin Kullanıcı Deneyimi Üzerindeki Etkisi"
-url = "sayi-1/dijitallesmenin-kullanici-deneyimi-üzerindeki-etkisi/"
+url = "sayi-1/dijitallesmenin-kullanici-deneyimi-uzerindeki-etkisi/"
 date = "2020-08-31"
 seotitle = "Dijitalleşmenin Kullanıcı Deneyimi Üzerindeki Etkisi"
 description="Fizikselden dijitale geçişle birlikte kullanıcı deneyiminin (ux) üzerindeki etkileri. Kullanıcı deneyimi sağlama unsurları nelerdir? Kullanıcı Deneyimi algıları neler?"
