--- a/content/sayi/sayi-1/1.md
+++ b/content/sayi/sayi-1/1.md
@@ -20,7 +20,7 @@ tags=["bir"]
             <p>Markut; Türk, Altay ve Moğol mitolojisinde dişi yırtıcı kuştur. Gök yolculuğuna çıkan kamın ruhuna, üç gökkatı boyunca kılavuzluk eden bu efsanevi kuşun kanatları altında bir proje başlattık.</p>
             <p>‘’<strong>Mar</strong>mara <strong>K</strong>reatif <strong>Ü</strong>rün <strong>T</strong>asarım Ekibi‘’ olarak; birebir uygulamalı işlerle kendimizi geliştirmek, ekip arkadaşlarımızla beraber bilgi paylaşım ağını kurmak ve böylece geleceğe dair yenilikler sunmak birinci önceliğimizdir. Markut’un doğuşu gibi yumurtamızı kırıp çıkarken bunu sizlerle paylaşmaktan gurur duymaktayız.</p>
             <p>Marmara Üniversitesi Endüstriyel Tasarım öğrencileri olarak bizler alanımızla ilgili araştırmalar yapıyor, düzenliyor ve sizlere sunuyoruz. Endüstriyel Tasarım adı altında başlattığımız dergi sayesinde ise geçmişi günümüzle harmanlarken geleceğe kanat çırpacağız.</p>
-            <p>Kafasını yumurtadan çıkartan Markut, her sayısıyla daha da büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz..</p>
+            <p>Kafasını yumurtadan çıkartan Markut, her sayısıyla daha da büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz...</p>
             </div>
         <div class="col-md-7">
             <img class="img-fluid" src="/img/markut-illustrasyon-yumurta.jpg" alt="">
