--- a/content/sayi/sayi-1/4.md
+++ b/content/sayi/sayi-1/4.md
@@ -15,7 +15,7 @@ tags= [
 "bir", "Sayi Bir", "Raymond Loewy"
 ]
 +++
-<a href="/sayi-1/dijitallesmenin-kullanici-deneyimi-üzerindeki-etkisi/" id="next"></a>
+<a href="/sayi-1/dijitallesmenin-kullanici-deneyimi-uzerindeki-etkisi/" id="next"></a>
 <div class="text-center"><img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy"></div>
 <div class="container">
     <h1>Rayların Üzerinde Raymond Loewy</h1>
