--- a/content/sayi/sayi-1/2.md
+++ b/content/sayi/sayi-1/2.md
@@ -1,22 +1,29 @@
-+++
-title = "İkonik Tasarımlar: Kahve Makineleri"
-url = "sayi-1/ikonik-kahve-makinesi-tasarimlari/"
-date = "2020-08-31"
-seotitle = "İkonik Kahve Makinesi Tasarımları"
-description="Kahvelerinizi hazırlayın ve okumaya başlayın… Yeni sayımızda kahve makinesi tasarımlarına değindik. BraunKF 20 Aromaster, Chambord, La Cupola, Moka Bialetti..."
-aciklama="Kahvelerinizi hazırlayın ve okumaya başlayın… 1972'de Florian Seiffert tarafından (Dieter Rams'ın rehberliğinde) Almanya’ da tasarlanmıştır. Braun için tasarlanan KF 20 Aromaster, kaynar suyu bir kahve filtresinden geçirmek için yerçekimini kullanan bir elektrikli kahve makinesidir."
-thumb="/img/coffee-machine-thumbnail.jpg"
-tarih="Eylül 2020"
-sayi="1"
-sayfa="02"
-yazar="Zeynep Dağ, İllustrasyon: Elif Ersöz"
-type="sayfa"
-tags= [
-"bir", "Sayi Bir", "ikonik"
-]
-+++
+---
+yazar: "Zeynep Dağ, İllustrasyon: Elif Ersöz"
+tarih: Eylül 2020
+sayfa: "02"
+aciklama: Kahvelerinizi hazırlayın ve okumaya başlayın… 1972'de Florian Seiffert
+  tarafından (Dieter Rams'ın rehberliğinde) Almanya’ da tasarlanmıştır. Braun
+  için tasarlanan KF 20 Aromaster, kaynar suyu bir kahve filtresinden geçirmek
+  için yerçekimini kullanan bir elektrikli kahve makinesidir.
+date: 2020-08-31
+url: sayi-1/ikonik-kahve-makinesi-tasarimlari/
+thumb: /img/coffee-machine-thumbnail.jpg
+title: "İkonik Tasarımlar: Kahve Makineleri"
+tags:
+  - bir
+  - Sayi Bir
+  - ikonik
+type: sayfa
+seotitle: İkonik Kahve Makinesi Tasarımları
+description: Kahvelerinizi hazırlayın ve okumaya başlayın… Yeni sayımızda kahve
+  makinesi tasarımlarına değindik. BraunKF 20 Aromaster, Chambord, La Cupola,
+  Moka Bialetti...
+sayi: "1"
+---
 <a href="/sayi-1/surdurulebilir-ambalaj-tasarimi/" id="next"></a>
-<div class="text-center"><img class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
+
+a<div class="text-center"><img class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
 <div class="container">
     <div class="row">
         <div class="col-md-4"><img class="img-fluid" src="/img/Braun-1972-KF-20.jpg" alt=""></div>
