config.yml ve a

--- a/content/sayi/sayi-1/2.md
+++ b/content/sayi/sayi-1/2.md
@@ -23,7 +23,7 @@ sayi: "1"
 ---
 <a href="/sayi-1/surdurulebilir-ambalaj-tasarimi/" id="next"></a>
 
-a<div class="text-center"><img class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
+<div class="text-center"><img class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
 <div class="container">
     <div class="row">
         <div class="col-md-4"><img class="img-fluid" src="/img/Braun-1972-KF-20.jpg" alt=""></div>
