--- a/content/blog/2020-09-12-blog-yazısı.md
+++ b/content/blog/2020-09-12-blog-yazısı.md
@@ -4,6 +4,7 @@ slug: blog-yazi-denemes
 draft: true
 yazar: Atahan Göktürk
 date: 2020-09-12T13:27:03.912Z
+thumb: /static/img/IMG_5953.jpg
 tags:
   - news
 seotitle: Seo başlığı
