Update Blog “2020-09-12-blog-yazısı”

--- a/content/blog/2020-09-12-blog-yazısı.md
+++ b/content/blog/2020-09-12-blog-yazısı.md
@@ -16,6 +16,6 @@ Markut; Türk, Altay ve Moğol mitolojisinde dişi yırtıcı kuştur. Gök yolc
 
 Marmara Üniversitesi Endüstriyel Tasarım öğrencileri olarak bizler alanımızla ilgili araştırmalar yapıyor, düzenliyor ve sizlere sunuyoruz. Endüstriyel Tasarım adı altında başlattığımız dergi sayesinde ise geçmişi günümüzle harmanlarken geleceğe kanat çırpacağız.
 
-Kafasını yumurtadan çıkartan Markut, her sayısıyla daha da büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz…
+Kafasını yumurtadan çıkartan Markut, her sayısıyla daha da büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz…deeeee
 
 ![](/img/markut-endustriyel-tasarim.jpg)
