Update Blog “2020-09-21-sallama”

--- a/content/blog/2020-09-21-sallama.md
+++ b/content/blog/2020-09-21-sallama.md
@@ -14,6 +14,10 @@ tags:
 
 Ut vulputate lorem mauris, eu imperdiet arcu ullamcorper pulvinar. In porta ornare orci, id lobortis augue fringilla in. Quisque ullamcorper lacus vitae suscipit ornare. Fusce quis finibus erat. Integer eu auctor purus, in suscipit eros. Nam eu dui ut risus posuere faucibus quis eu ligula. Nullam a posuere dui. Quisque vulputate metus aliquam velit porttitor, in mattis leo convallis. Nullam efficitur odio sit amet gravida vehicula. In sodales consectetur scelerisque. Duis in neque eget nisi tristique volutpat eu at
 
+
+
+![](/img/IMG_5953.jpg "Görsel ayarlama")
+
 # mauris
 
 Praesent consequat, ligula nec aliquam tempor, ante neque ornare sem, eget consectetur sapien risus in tellus. Aliquam erat volutpat. Vestibulum quis blandit leo. In ac ipsum iaculis, ullamcorper justo non, fermentum turpis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec sit amet justo in sem faucibus fringilla. Phasellus sed nibh a nunc condimentum vehicula ut vitae ante. Nam sed erat facilisis diam consectetur suscipit. Aenean ac convallis eros, id lacinia nunc. Curabitur tincidunt sapien ante, eu semper sem sagittis id. Fusce quis egestas purus, id laoreet felis. Mauris tristique, velit vitae vehicula suscipit, metus nunc feugiat eros, ac finibus nisl turpis in tortor. Praesent dapibus, odio a egestas gravida, velit ante pretium nulla, et tincidunt sapien enim nec lorem. Curabitur ut mauris pulvinar, varius magna et, mattis turpis.
