Update Blog “2020-09-21-sallama”

--- a/content/blog/2020-09-21-sallama.md
+++ b/content/blog/2020-09-21-sallama.md
@@ -6,7 +6,7 @@ yazar:
 date: 2020-09-21T14:47:49.330Z
 thumb: /static/img/Sustainability-juisa-jung.jpg
 tags:
-  - Tag
+  - Tasarim
 ---
 **Lorem ipsum dolor sit amet,** *consectetur adipiscing elit.* Nunc ut justo lacinia, pellentesque lacus sit amet, aliquam ex. Vestibulum libero felis, suscipit vestibulum orci quis, convallis rutrum sem. Proin imperdiet viverra faucibus. Aenean eu sapien arcu. Cras ac condimentum lorem. Phasellus at aliquet diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi laoreet, quam sed blandit pellentesque, erat lectus rutrum diam, id efficitur urna nunc sed urna.
 
